# gtpr

./: .gitignore  Makefile  pyproject.toml
src/gtpr/: __main__.py  calc.py  constants.py  custominput.py  data.py  gcslparser.py  genshinconstants.py  optimisertarget.py  team.py
