[project]
name = "gtpr"
version = "0.1.0"
description = "genshin team power ranking"
authors = [{ name = "r5ne" }]
requires-python = ">=3.14"
readme = "README.md"
dependencies = [
    "pydantic>=2.12.3",
]

[tool.hatch.build.targets.sdist]
include = ["src/gtpr"]

[tool.hatch.build.targets.wheel]
include = ["src/gtpr"]

[tool.hatch.build.targets.wheel.sources]
"src/gtpr" = "gtpr"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "debugpy>=1.8.17",
]

[tool.basedpyright]
executionEnvironments = [
{ root = "src/gtpr" }
]
pythonPlatform = "All"
# ignored errors
reportUnusedImport = false
reportExplicitAny = false
 reportMissingTypeArgument = false

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    # docstrings
    "D100", "D101", "D203", "D213",
    # flake8print
    "T201",
    # annotations
    "ANN204",
]
